really final push

--- a/Pfizer_2015_Talk.html
+++ b/Pfizer_2015_Talk.html
@@ -329,15 +329,15 @@ HU(v) = 1000 \times \frac{\mu(v) - \mu_{\text{water}}}{ \mu_{\text{water}}- \mu_
 
 </article></slide><slide class=''><hgroup><h2>Subject Data used: 111 scans (1 per patient)</h2></hgroup><article  id="subject-data-used-111-scans-1-per-patient">
 
-<div class="columns-2" style="font-size: 22pt;">
-<div>
+<div id="wrap">
+<div id="left_col">
 <table class = 'rmdtable'>
 <tr class="header">
 <th align="center"> </th>
 <th align="center">Overall</th>
 </tr>
 <tr class="odd">
-<td align="center"><strong>Age (Mean (SD))</strong></td>
+<td align="center"><strong>Age in Years (Mean (SD))</strong></td>
 <td align="center">60.7 (11.2)</td>
 </tr>
 <tr class="even">
@@ -345,17 +345,18 @@ HU(v) = 1000 \times \frac{\mu(v) - \mu_{\text{water}}}{ \mu_{\text{water}}- \mu_
 <td align="center">77 (68.8%)</td>
 </tr>
 <tr class="odd">
-<td align="center"><strong>Diagnostic ICH Volume (Mean (SD))</strong></td>
+<td align="center"><strong>Diagnostic ICH Volume in mL (Mean (SD))</strong></td>
 <td align="center">37.7 (20.2)</td>
 </tr>
 <tr class="even">
-<td align="center"><strong>Diagnostic IVH Volume (Mean (SD))</strong></td>
+<td align="center"><strong>Diagnostic IVH Volume in mL (Mean (SD))</strong></td>
 <td align="center">3.2 (6.3)</td>
 </tr>
 </table></div>
 
-<div>
+<div id="right_col" style="font-size: 24pt;">
 <ul>
+<li>Adults (inclusion criteria 18-80 years old)</li>
 <li>Large ICH areas</li>
 <li>Small Intraventricular Hemorrhages (IVH)</li>
 </ul></div></div>
