really final push

--- a/Pfizer_2015_Talk.html
+++ b/Pfizer_2015_Talk.html
@@ -337,19 +337,19 @@ HU(v) = 1000 \times \frac{\mu(v) - \mu_{\text{water}}}{ \mu_{\text{water}}- \mu_
 <th align="center">Overall</th>
 </tr>
 <tr class="odd">
-<td align="center"><strong>Age in Years (Mean (SD))</strong></td>
+<td align="center"><strong>Age in Years: Mean (SD)</strong></td>
 <td align="center">60.7 (11.2)</td>
 </tr>
 <tr class="even">
-<td align="center"><strong>Male (N (%))</strong></td>
+<td align="center"><strong>Male: N (%)</strong></td>
 <td align="center">77 (68.8%)</td>
 </tr>
 <tr class="odd">
-<td align="center"><strong>Diagnostic ICH Volume in mL (Mean (SD))</strong></td>
+<td align="center"><strong>Diagnostic ICH Volume in mL: Mean (SD)</strong></td>
 <td align="center">37.7 (20.2)</td>
 </tr>
 <tr class="even">
-<td align="center"><strong>Diagnostic IVH Volume in mL (Mean (SD))</strong></td>
+<td align="center"><strong>Diagnostic IVH Volume in mL: Mean (SD)</strong></td>
 <td align="center">3.2 (6.3)</td>
 </tr>
 </table></div>
