--- a/Pfizer_2015_Talk.html
+++ b/Pfizer_2015_Talk.html
@@ -596,13 +596,14 @@ TP
 
 </article></slide><slide class=''><hgroup><h2>Conclusions</h2></hgroup><article  id="conclusions">
 
+<div style="font-size: 24pt">
 <ul>
 <li>Large ICH can be segmented using CT</li>
 <li>Simple methods can be used for voxel-wise segmentation</li>
 <li>A small training set can be used</li>
 <li>Feature selection is important</li>
 <li>All the analysis can be done in R</li>
-</ul>
+</ul></div>
 
 </article></slide><slide class=''><hgroup><h2>Other Projects</h2></hgroup><article  id="nextsteps">
 
